--- a/α-D-glucose.html
+++ b/α-D-glucose.html
@@ -21,5 +21,8 @@ src="./α-D-glucose.glb"
 alt="α-D-glucose"
 camera-controls
 ></model-viewer>
+  
+ <a href=""><font https://kasailabomue.github.io/Seiryodemae/demaezyugyou.html
+    size="">戻る</font></a><br>
 </body>
 </html>
