--- a/demaezyugyou.html
+++ b/demaezyugyou.html
@@ -7,9 +7,9 @@
 
  <font size="9">Web3Dモデル</font><br>
 
- <a href="https://https://kasailabomue.github.io/Seiryodemae/α-D-glucose"><font size="5">α-グルコース</font></a><br>
+ <a href="https://kasailabomue.github.io/Seiryodemae/α-D-glucose"><font size="5">α-グルコース</font></a><br>
 
- <a href="https://kasailabomue.github.io/MUEAR-Sulfonic-acid/taurine.html"><font size="5">タウリン</font></a><br>
+ <a href="https://kasailabomue.github.io/Seiryodemae/taurine.html"><font size="5">タウリン</font></a><br>
 
 
 
