--- a/α-D-glucose.html
+++ b/α-D-glucose.html
@@ -21,8 +21,6 @@ src="./α-D-glucose.glb"
 alt="α-D-glucose"
 camera-controls
 ></model-viewer>
-  
- <a href=""><font https://kasailabomue.github.io/Seiryodemae/demaezyugyou.html
-    size="">戻る</font></a><br>
+ <a href="https://kasailabomue.github.io/Seiryodemae/demaezyugyou.html"><font size="5">戻る</font></a><br>
 </body>
 </html>
