--- a/taurine.html
+++ b/taurine.html
@@ -22,8 +22,7 @@ alt="taurine"
 auto-rotate
 camera-controls
 ></model-viewer>
-<a href=""><font https://kasailabomue.github.io/Seiryodemae/demaezyugyou.html
-    size="5">戻る</font></a><br>
+ <a href="https://kasailabomue.github.io/Seiryodemae/demaezyugyou.html"><font size="5">戻る</font></a><br>
 </body>
 
 </html>
