--- a/demaezyugyou.html
+++ b/demaezyugyou.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <I><title>Web3Dモデル</title></I>
-<BODY BGCOLOR="#b0c4de"></BODY>
+<BODY BGCOLOR="#FFFAFA"></BODY>
 <body>
 
  <font size="20">Web3Dモデル</font><br>
